# template-python-fastapi-docker-postgres

./: LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
src/appname/: __init__.py
